# BlackjackBot

./: .editorconfig  .gitignore  Makefile  README.md  alembic-black.toml  alembic.ini  config.env.sample  pyproject.toml
.github/workflows/: checks.yaml
app/: main.py
app/admin/: dtos.py  models.py  schemas.py  views.py
app/admin_api/: main.py
app/admin_api/admin/: accessor.py  dtos.py  models.py  routes.py  schemas.py  views.py
app/admin_api/blackjack/: accessor.py  dtos.py  routes.py  schemas.py  views.py
app/admin_api/web/: app.py  middlewares.py  routes.py  store.py
app/admin_api/web/base/: base_dto.py  base_schema.py  base_view.py
app/blackjack_bot/: main.py
app/blackjack_bot/blackjack/: deck.py  game.py  lobby.py  models.py  player.py  store.py  timer.py
app/blackjack_bot/blackjack/state_handlers/: base.py  betting.py  finished.py  playing.py  registration.py
app/blackjack_bot/bot/: accessor.py  inline_keyboard.py  message_editor.py
app/blackjack_bot/telegram/: accessor.py  constants.py  dtos.py  inline_keyboard.py  poller.py  utils.py
app/store/admin/: accessor.py
app/store/bot/: accessor.py
app/store/database/: database.py  metadata.py
app/store/telegram/: accessor.py  constants.py  poller.py
app/web/: app.py  config.py  middlewares.py  routes.py  store.py
app/web/base/: base_accessor.py  base_dto.py  base_view.py
migrations/: env.py
migrations/versions/: 2022_09_08_1436-990ff82f732d_initial.py  2022_09_20_1427-3625e95e1d19_blackjack_tables.py
tests/: conftest.py  utils.py
tests/admin/: test_login.py
tests/database/: test_migrations.py
tests/fixtures/: admin.py  app.py  database.py
